# sphinx-old

./: COPYING  INSTALL  Makefile.am  README.md  autogen.sh  configure.ac  libsphinxcoinconsensus.pc.in
build-aux/m4/: sphinxcoin_find_bdb48.m4  sphinxcoin_qt.m4  sphinxcoin_subdir_to_include.m4
contrib/: README.md  gitian-build.sh  install_db4.sh  sphinxcoin-cli.bash-completion  sphinxcoin-qt.pro  sphinxcoin-tx.bash-completion  sphinxcoind.bash-completion  tidy_datadir.sh  valgrind.supp
contrib/debian/: README.md  changelog  control  copyright  rules  sphinxcoin-qt.desktop  sphinxcoin-qt.install  sphinxcoin-qt.lintian-overrides  sphinxcoin-qt.manpages  sphinxcoin-qt.protocol  sphinxcoin-tx.bash-completion  sphinxcoin-tx.install  sphinxcoin-tx.manpages  sphinxcoind.bash-completion  sphinxcoind.install  sphinxcoind.lintian-overrides  sphinxcoind.manpages  watch
contrib/devtools/: README.md  check-doc.py  check-rpc-mappings.py  commit-script-check.sh  copyright_header.py  gen-manpages.sh  git-subtree-check.sh  github-merge.py  lint-all.sh  lint-python.sh  lint-whitespace.sh  optimize-pngs.py  security-check.py  symbol-check.py  test-security-check.py  update-translations.py
contrib/gitian-descriptors/: gitian-linux.yml  gitian-osx-signer.yml  gitian-osx.yml  gitian-win-signer.yml  gitian-win.yml
contrib/init/: README.md  org.sphinxcoin.sphinxcoind.plist  sphinxcoind.conf  sphinxcoind.init  sphinxcoind.openrc  sphinxcoind.openrcconf  sphinxcoind.service
contrib/linearize/: README.md  example-linearize.cfg  linearize-data.py  linearize-hashes.py
contrib/macdeploy/: README.md  custom_dsstore.py  detached-sig-apply.sh  detached-sig-create.sh  extract-osx-sdk.sh  fancy.plist  macdeployqtplus
contrib/qos/: README.md  tc.sh
contrib/rpm/: README.md  sphinxcoin-0.12.0-libressl.patch  sphinxcoin.fc  sphinxcoin.if  sphinxcoin.spec  sphinxcoin.te
contrib/seeds/: README.md  generate-seeds.py  makeseeds.py  nodes_test.txt
contrib/testgen/: README.md  base58.py  gen_base58_test_vectors.py
contrib/verify-commits/: gpg.sh  pre-push-hook.sh  verify-commits.sh
contrib/verifybinaries/: README.md  verify.sh
contrib/windeploy/: detached-sig-create.sh
contrib/zmq/: zmq_sub.py  zmq_sub3.4.py
depends/: README.md  description.md
doc/: Doxyfile.in  README.md  README_osx.md  README_windows.txt  REST-interface.md  assets-attribution.md  benchmarking.md  bips.md  build-netbsd.md  build-openbsd.md  build-osx.md  build-unix.md  build-windows.md  dependencies.md  developer-notes.md  dnsseed-policy.md  files.md  fuzzing.md  gitian-building.md  init.md  reduce-traffic.md  release-notes.md  release-process.md  shared-libraries.md  tor.md  translation_process.md  translation_strings_policy.md  travis-ci.md  zmq.md
doc/install-guide/: MANUAL_SETUP.md  README.md  SPHX_HEADLESS_UBUNTU_V2.sh  sphx.py  sphx.sh
doc/man/: Makefile.am  sphinxcoin-cli.1  sphinxcoin-qt.1  sphinxcoin-tx.1  sphinxcoind.1
doc/release-notes/: release-notes-0.15.1.md
share/: genbuild.sh  setup.nsi.in
share/pixmaps/: sphinxcoin128.xpm  sphinxcoin16.xpm  sphinxcoin256.xpm  sphinxcoin32.xpm  sphinxcoin64.xpm
share/qt/: Info.plist.in  extract_strings_qt.py
share/rpcauth/: rpcauth.py
src/: Makefile.am  Makefile.leveldb.include  Makefile.qt.include  Makefile.test.include  activemasternode.cpp  addrman.h  alert.cpp  allocators.h  amount.h  arith_uint256.h  base58.cpp  base58.h  chain.h  chainparams.cpp  chainparams.h  chainparamsseeds.h  checkpoints.cpp  checkpoints.h  clientversion.h  coins.cpp  coins.h  compat.h  compressor.h  core_io.h  core_memusage.h  core_read.cpp  core_write.cpp  cuckoocache.h  db.h  ecwrapper.h  globals.h  hash.h  indirectmap.h  init.cpp  init.h  key.h  keystore.h  limitedmap.h  main.cpp  main.h  (+63 more)
src/compat/: byteswap.h  endian.h  glibc_compat.cpp  glibc_sanity.cpp  sanity.h  strnlen.cpp
src/consensus/: consensus.h
src/crypto/: common.h  hmac_sha256.h  hmac_sha512.h  ripemd160.h  sha1.h  sha256.h  sha512.h
src/json/: json_spirit_value.h  json_spirit_writer_template.h
src/policy/: feerate.cpp  feerate.h  policy.h
src/primitives/: block.cpp  block.h  transaction.cpp  transaction.h
src/qt/: addressbookpage.cpp  addresstablemodel.cpp  addresstablemodel.h  askpassphrasedialog.cpp  askpassphrasedialog.h  bantablemodel.h  clientmodel.h  coincontroldialog.cpp  editaddressdialog.cpp  guiconstants.h  guiutil.cpp  guiutil.h  macdockiconhandler.h  masternodemanager.cpp  multisigaddressentry.cpp  multisigdialog.cpp  multisiginputentry.cpp  notificator.cpp  notificator.h  optionsdialog.cpp  optionsmodel.cpp  optionsmodel.h  overviewpage.cpp  paymentserver.cpp  paymentserver.h  qrcodedialog.cpp  rpcconsole.cpp  rpcconsole.h  sendcoinsdialog.cpp  sendcoinsentry.cpp  signverifymessagedialog.cpp  sphinxcoin.cpp  sphinxcoin.qrc  sphinxcoin_locale.qrc  sphinxcoinaddressvalidator.cpp  sphinxcoinaddressvalidator.h  sphinxcoinamountfield.cpp  sphinxcoinamountfield.h  sphinxcoingui.cpp  sphinxcoingui.h  (+13 more)
src/qt/forms/: aboutdialog.ui  addeditatomnode.ui  addressbookpage.ui  atomnodeconfigdialog.ui  coincontroldialog.ui  editaddressdialog.ui  masternodemanager.ui  multisigaddressentry.ui  multisigdialog.ui  multisiginputentry.ui  optionsdialog.ui  overviewpage.ui  qrcodedialog.ui  rpcconsole.ui  sendcoinsdialog.ui  sendcoinsentry.ui  signverifymessagedialog.ui  stashedsendconfig.ui
src/qt/locale/: sphinxcoin_en.ts  sphinxcoin_zh_CN.ts
src/qt/res/: sphinxcoin-qt.rc
src/qt/res/icons/: sphinxcoin.icns
src/qt/test/: uritests.cpp
src/script/: interpreter.h  ismine.h  script.h  script_error.h  sigcache.h  sign.h  standard.cpp  standard.h
src/secp256k1/: Makefile.am  README.md  libsecp256k1.pc.in
src/secp256k1/src/java/: org_sphinxcoin_NativeSecp256k1.c  org_sphinxcoin_NativeSecp256k1.h
src/secp256k1/src/java/org/sphinxcoin/: NativeSecp256k1.java
src/support/: cleanse.h
src/test/: base32_tests.cpp  key_tests.cpp  netbase_tests.cpp  serialize_tests.cpp  test_sphinxcoin.cpp
test/: README.md  config.ini.in
test/functional/: README.md  combine_logs.py  create_cache.py  example_test.py  (+88 more)
(+20 files in other folders)
